# fluffy-logic

./: .gitignore  CMakeLists.txt  README.md
include/common/: types.h
include/fuzzy/characteristics/: gaussian.h  include_function.h  sigmoid.h  trapezoid.h  triangle.h  z_type.h
include/fuzzy/quantifiers/: more_less_quantifier.h  not_quantifier.h  quantifier.h  very_quantifier.h
include/fuzzy/variables/: colorimetric_variable.h  fuzzy_variable.h  maxmin_variable.h
src/: CMakeLists.txt
src/fuzzy/: CMakeLists.txt
src/fuzzy/quantifiers/: CMakeLists.txt  more_less_quantifier.cpp  not_quantifier.cpp  quantifier.cpp  very_quantifier.cpp
src/fuzzy/quantifiers/tests/: test_quantifier_examplars.cpp
src/fuzzy/variables/: CMakeLists.txt  colorimetric_variable.cpp  maxmin_variable.cpp
src/fuzzy/variables/tests/: test_variables.cpp
