project(fuzzy_quantifiers CXX)

string(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)

file(GLOB_RECURSE HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

string(REPLACE "${GLOBAL_PROJECT_SOURCE_DIR}/src/" "" CMAKE_CURRENT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
string(CONCAT CMAKE_CURRENT_INCLUDE_DIR "${GLOBAL_PROJECT_SOURCE_DIR}/include/" "${CMAKE_CURRENT_INCLUDE_DIR}")

file(GLOB_RECURSE INCLUDE_FILES "${CMAKE_CURRENT_INCLUDE_DIR}/*.h" "${CMAKE_CURRENT_INCLUDE_DIR}/*.hpp")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES} ${INCLUDE_FILES})

INCLUDE_DIRECTORIES(
		"${CMAKE_CURRENT_INCLUDE_DIR}"
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
PUBLIC
	"${CMAKE_CURRENT_INCLUDE_DIR}"
)

file(GLOB_RECURSE TESTS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
find_package (Boost COMPONENTS unit_test_framework REQUIRED)

include_directories(${Boost_INCLUDE_DIRS})
set(TEST test_${PROJECT_NAME})
add_executable (${TEST} ${TESTS_SOURCES})
target_link_libraries (${TEST} ${PROJECT_NAME} ${Boost_LIBRARIES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    DEFINE_SYMBOL "FUZZY_QUANTIFIERS_LIB"
    FOLDER      "src/fuzzy/quantifiers"
    COMPILE_DEFINITIONS "_USE_MATH_DEFINES;"
    LINKER_LANGUAGE CXX
)

enable_testing ()
add_test (${TEST} ${TEST})
